--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 PORT=5001
+MONGODB_URI=mongodb+srv://workup63663:Test12345@cluster0.qwygjwc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
