feat(admin-panel): Setup react project and display product list

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5001
-MONGODB_URI=mongodb+srv://workup63663:Test12345@cluster0.qwygjwc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://workup63663:Test12345@cluster0.qwygjwc.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
